@@ -90,6 +90,8 @@ PHP                                                                        NEWS
 - Fixed bug #36630 (umask not reset at the end of the request). (Ilia)
 - Fixed bug #35512 (Lack of read permission on main script results in 
   E_WARNING rather then E_ERROR). (Ilia)
+- Fixed bug #34180 (--with-curlwrappers causes PHP to disregard some HTTP 
+  stream context options). (Mike)
 
 04 May 2006, PHP 5.1.4
 - Added "capture_peer_cert" and "capture_peer_cert_chain" context options
